# OpenGL_SDL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  manifest  meson.build
OpenGL_SDL/: CMakeLists.txt  OpenGL_SDL  buildfile  main.cpp
OpenGL_SDL/Camera/: Camera.cpp  Camera.hpp
OpenGL_SDL/ECS/: CMakeLists.txt  ComponentInterface.cpp  meson.build
OpenGL_SDL/ECS/Components/: CMakeLists.txt
OpenGL_SDL/ECS/Components/Transform/: Transform.hpp
OpenGL_SDL/ECS/Components/UserInput/: UserInput.cpp
OpenGL_SDL/ECS/Systems/: CMakeLists.txt
OpenGL_SDL/ECS/Systems/BasicBackup/: BasicBackup.cpp
OpenGL_SDL/ECS/Systems/Collision/: Collision.cpp
OpenGL_SDL/ECS/Systems/Force/: Force.cpp
OpenGL_SDL/ECS/Systems/Render/: Render.cpp
OpenGL_SDL/ECS/Systems/UserInput/: UserInput.cpp
OpenGL_SDL/Octree/: Octree.cpp  Octree.hpp
OpenGL_SDL/minitrace/: minitrace.cpp  minitrace.h
Resources/: buildfile  shader.frag
res/: cube.mtl  fizzbuzz.frag  shader.frag  shader.vert
src/: Common.hpp  OBJ_Loader.h  main.cpp  mainOld.cpp.bak  meson.build
src/Camera/: Camera.cpp  Camera.hpp
src/ECS/: ComponentInterface.cpp  ComponentInterface.hpp  ECS.cpp  ECS.hpp  TransformedMinMax.cpp  TransformedMinMax.hpp  meson.build
src/ECS/Components/BasicBackup/: BasicBackup.hpp
src/ECS/Components/Children/: Children.cpp  Children.hpp
src/ECS/Components/Collision/: Collision.hpp
src/ECS/Components/Force/: Force.hpp
src/ECS/Components/LightInfo/: LightInfo.hpp
src/ECS/Components/Meshes/: Meshes.cpp  Meshes.hpp
src/ECS/Components/Transform/: Transform.cpp  Transform.hpp
src/ECS/Components/UserInput/: UserInput.hpp
src/ECS/Systems/AutoPosition/: AutoPosition.cpp  AutoPosition.hpp
src/ECS/Systems/BasicBackup/: BasicBackup.cpp  BasicBackup.hpp
src/ECS/Systems/Collision/: Collision.cpp  Collision.hpp  triangles.c
src/ECS/Systems/Force/: Force.cpp  Force.hpp
src/ECS/Systems/Render/: Render.cpp  Render.hpp
src/ECS/Systems/UserInput/: UserInput.cpp  UserInput.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp
src/Octree/: Octree.cpp  Octree.hpp
src/Render/: Render.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/TexturedMesh/: TexturedMesh.cpp  TexturedMesh.hpp
src/Window/: Window.cpp  Window.hpp  Window.s
src/minitrace/: minitrace.h
