sources += ['ECS/Components/Meshes/Meshes.cpp',
'ECS/Components/Children/Children.cpp',
'ECS/Components/UserInput/UserInput.cpp',
'ECS/Systems/Render/Render.cpp',
'ECS/Systems/UserInput/UserInput.cpp',
'ECS/Systems/AutoPosition/AutoPosition.cpp',
'ECS/Systems/Collision/Collision.cpp',
'ECS/TransformedMinMax.cpp']